--- a/style.scss
+++ b/style.scss
@@ -7,7 +7,9 @@
 
 @import "reset";
 @import "variables";
+@import "entry";
 // Syntax highlighting @import is at the bottom of this file
+
 
 /**************/
 /* BASE RULES */
