--- a/style.scss
+++ b/style.scss
@@ -167,9 +167,10 @@ img {
 
 .site-avatar {
 	float: left;
-	width: 70px;
-	height: 70px;
+	width: 50px;
+	height: 50px;
 	margin-right: 15px;
+	margin-top: 10px;
 
 	@include mobile {
 		float: none;
