--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,8 +11,7 @@
 
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
-
-    <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
+    <link rel="shortcut icon" type="image/png" href="{{ site.baseurl }}/images/favicon.png"/>
   </head>
 
   <body>
