--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
 		<div class="wrapper-masthead">
 			<div class="container">
 				<header class="masthead clearfix">
-					<a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}"/></a>
+					<a href="{{ site.baseurl }}/" class="site-logo"><img src="{{ site.logo }}"/></a>
 
 					<div class="site-info">
 						<h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
