--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
 					</div>
 
 					<nav>
-						<a href="{{ site.baseurl }}/">Blog</a>
+						<a href="{{ site.baseurl }}/blog/">Blog</a>
 						<a href="{{ site.baseurl }}/about">About</a>
 					</nav>
 				</header>
