--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}</title>
 		{% include meta.html %}
-		<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css"/>
+		<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/styles/style.css"/>
 		<link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml"/>
 		<link rel="shortcut icon" type="image/png" href="{{ site.baseurl }}/images/favicon.png"/>
 	</head>
