--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,15 +3,14 @@ layout: default
 ---
 
 <article class="post">
-  <h1>{{ page.title }}</h1>
+	<h1>{{ page.title }}</h1>
+	<time class="date" datetime="{{page.date | date_to_xmlschema}}">
+		Written on {{ page.date | date: "%Y-%m-%d" }}
+	</time>
 
-  <div class="entry">
-    {{ content }}
-  </div>
+	<div class="entry">
+		{{ content }}
+	</div>
 
-  <div class="date">
-    Written on {{ page.date | date: "%B %e, %Y" }}
-  </div>
-
-  {% include disqus.html %}
+	{% include disqus.html %}
 </article>
