--- a/_includes/svg-icons.html
+++ b/_includes/svg-icons.html
@@ -1,6 +1,6 @@
-{% if site.footer-links.email %}<a href="mailto:{{ site.footer-links.email }}"><i class="svg-icon email"></i></a>{% endif %}
-{% if site.footer-links.facebook %}<a href="https://facebook.com/{{ site.footer-links.facebook }}"><i class="svg-icon facebook"></i></a>{% endif %}
-{% if site.footer-links.github %}<a href="https://github.com/{{ site.footer-links.github }}"><i class="svg-icon github"></i></a>{% endif %}
-{% if site.footer-links.twitter %}<a href="http://twitter.com/{{ site.footer-links.twitter }}"><i class="svg-icon twitter"></i></a>{% endif %}
-{% if site.footer-links.youtube %}<a href="https://youtube.com/{{ site.footer-links.youtube }}"><i class="svg-icon youtube"></i></a>{% endif %}
-{% if site.footer-links.rss %}<a href="{{ site.baseurl }}/feed.xml"><i class="svg-icon rss"></i></a>{% endif %}
+{% if site.vars.email %}<a href="mailto:{{ site.vars.email }}"><i class="svg-icon email"></i></a>{% endif %}
+{% if site.vars.links.facebook %}<a href="https://facebook.com/{{ site.vars.links.facebook }}"><i class="svg-icon facebook"></i></a>{% endif %}
+{% if site.vars.links.github %}<a href="https://github.com/{{ site.vars.links.github }}"><i class="svg-icon github"></i></a>{% endif %}
+{% if site.vars.links.twitter %}<a href="https://twitter.com/{{ site.vars.links.twitter }}"><i class="svg-icon twitter"></i></a>{% endif %}
+{% if site.vars.links.youtube %}<a href="https://youtube.com/{{ site.vars.links.youtube }}"><i class="svg-icon youtube"></i></a>{% endif %}
+{% if site.vars.rss %}<a href="{{ site.baseurl }}/feed.xml"><i class="svg-icon rss"></i></a>{% endif %}
