--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,8 +15,9 @@
 				</div>
 
 				<nav>
+					<a href="{{ site.baseurl }}/about/">About</a>
 					<a href="{{ site.baseurl }}/blog/">Blog</a>
-					<a href="{{ site.baseurl }}/about">About</a>
+					<a href="{{ site.baseurl }}/join">Join us</a>
 				</nav>
 			</header>
 		</div>
