--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,6 +6,9 @@ layout: default
 	<h1>{{ page.title }}</h1>
 	<time class="date" datetime="{{ page.date | date_to_xmlschema }}">
 		Written on {{ page.date | date: "%Y-%m-%d" }}
+		{% if page.author %}
+			by <span rel="author">{{ page.author }}</span>
+		{% endif %}
 	</time>
 
 	<div class="entry">
