Add discord link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,7 @@
 					<a href="{{ site.baseurl }}/about/">About</a>
 					<a href="{{ site.baseurl }}/blog/">Blog</a>
 					<a href="{{ site.baseurl }}/join">Join us</a>
+					<a href="{{ site.vars.links.discord.devs }}" target="_blank">Discord</a>
 				</nav>
 			</header>
 		</div>
